k8s: add default envs and fix tests

--- a/provider/k8s/template/app/service.yml.tmpl
+++ b/provider/k8s/template/app/service.yml.tmpl
@@ -111,11 +111,18 @@ spec:
               name: resource-{{ k8sname .Name }}
               key: URL
         {{ end }}
+        {{ range defaultEnvs }}
+        - name: "{{ envKey . }}"
+          valueFrom:
+            secretKeyRef:
+              name: env-{{$.Service.Name}}
+              key: {{ envKey . }}
+        {{ end }}
         {{ range .Service.Environment }}
         - name: "{{ envKey . }}"
           valueFrom:
             secretKeyRef:
-              name: env-{{.Service.Name}}
+              name: env-{{$.Service.Name}}
               key: {{ envKey . }}
         {{ end }}
         image: {{ image .App .Service .Release }}
