--- a/provider/k8s/template/app/timer.yml.tmpl
+++ b/provider/k8s/template/app/timer.yml.tmpl
@@ -48,7 +48,7 @@ spec:
             - name: INSTANCE_IP
               valueFrom:
                 fieldRef:
-                  fieldPath: status.hostIP              
+                  fieldPath: status.hostIP
             {{ range $.Resources }}
             - name: "{{.Env}}"
               valueFrom:
@@ -56,9 +56,20 @@ spec:
                   name: resource-{{ k8sname .Name }}
                   key: URL
             {{ end }}
-            envFrom:
-            - secretRef:
-                name: env-{{.Service.Name}}
+            {{ range defaultEnvs }}
+            - name: "{{ envKey . }}"
+              valueFrom:
+                secretKeyRef:
+                  name: env-{{$.Service.Name}}
+                  key: {{ envKey . }}
+            {{ end }}
+            {{ range .Service.Environment }}
+            - name: "{{ envKey . }}"
+              valueFrom:
+                secretKeyRef:
+                  name: env-{{$.Service.Name}}
+                  key: {{ envKey . }}
+            {{ end }}
             image: {{ image .App .Service .Release }}
             imagePullPolicy: IfNotPresent
             resources:
