k8s: yaml safe decleration

--- a/provider/k8s/template/app/service.yml.tmpl
+++ b/provider/k8s/template/app/service.yml.tmpl
@@ -123,7 +123,7 @@ spec:
           valueFrom:
             secretKeyRef:
               name: env-{{$.Service.Name}}
-              key: {{ envKey . }}
+              key: "{{ envKey . }}"
         {{ end }}
         image: {{ image .App .Service .Release }}
         imagePullPolicy: IfNotPresent
