--- a/provider/k8s/template/app/timer.yml.tmpl
+++ b/provider/k8s/template/app/timer.yml.tmpl
@@ -61,14 +61,14 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: env-{{$.Service.Name}}
-                  key: {{ envKey . }}
+                  key: "{{ envKey . }}"
             {{ end }}
             {{ range .Service.Environment }}
             - name: "{{ envKey . }}"
               valueFrom:
                 secretKeyRef:
                   name: env-{{$.Service.Name}}
-                  key: {{ envKey . }}
+                  key: "{{ envKey . }}"
             {{ end }}
             image: {{ image .App .Service .Release }}
             imagePullPolicy: IfNotPresent
