--- a/provider/k8s/template/app/service.yml.tmpl
+++ b/provider/k8s/template/app/service.yml.tmpl
@@ -111,6 +111,11 @@ spec:
               name: resource-{{ k8sname .Name }}
               key: URL
         {{ end }}
+        {{ if wildcardIn range .Service.Environment }}
+        envFrom:
+        - secretRef:
+            name: env-{{.Service.Name}}
+        {{ else }}
         {{ range defaultEnvs }}
         - name: "{{ envKey . }}"
           valueFrom:
@@ -124,6 +129,7 @@ spec:
             secretKeyRef:
               name: env-{{$.Service.Name}}
               key: "{{ envKey . }}"
+        {{ end }}
         {{ end }}
         image: {{ image .App .Service .Release }}
         imagePullPolicy: IfNotPresent
