--- a/provider/k8s/template/app/timer.yml.tmpl
+++ b/provider/k8s/template/app/timer.yml.tmpl
@@ -56,6 +56,11 @@ spec:
                   name: resource-{{ k8sname .Name }}
                   key: URL
             {{ end }}
+            {{ if wildcardIn range .Service.Environment }}
+            envFrom:
+            - secretRef:
+                name: env-{{.Service.Name}}
+            {{ else }}
             {{ range defaultEnvs }}
             - name: "{{ envKey . }}"
               valueFrom:
@@ -69,6 +74,7 @@ spec:
                 secretKeyRef:
                   name: env-{{$.Service.Name}}
                   key: "{{ envKey . }}"
+            {{ end }}
             {{ end }}
             image: {{ image .App .Service .Release }}
             imagePullPolicy: IfNotPresent
