--- a/provider/k8s/template/app/timer.yml.tmpl
+++ b/provider/k8s/template/app/timer.yml.tmpl
@@ -56,13 +56,9 @@ spec:
                   name: resource-{{ k8sname .Name }}
                   key: URL
             {{ end }}
-            {{ range getEnv .Service.Environment $.Environment }}
-            - name: "{{ envKey . }}"
-              valueFrom:
-                secretKeyRef:
-                  name: env-{{$.Service.Name}}
-                  key: "{{ envKey . }}"
-            {{ end }}
+            envFrom:
+            - secretRef:
+                name: env-{{.Service.Name}}
             image: {{ image .App .Service .Release }}
             imagePullPolicy: IfNotPresent
             resources:
