metal: use loki and promtail for logging

--- a/provider/k8s/template/resource/mariadb.yml.tmpl
+++ b/provider/k8s/template/resource/mariadb.yml.tmpl
@@ -43,6 +43,7 @@ metadata:
     type: resource
     kind: mariadb
     resource: {{.Name}}
+    name: {{.Name}}
 spec:
   selector:
     matchLabels:
