--- a/provider/k8s/template/resource/memcached.yml.tmpl
+++ b/provider/k8s/template/resource/memcached.yml.tmpl
@@ -26,6 +26,7 @@ metadata:
     type: resource
     kind: memcached
     resource: {{.Name}}
+    name: {{.Name}}
 spec:
   selector:
     matchLabels:
