--- a/pkg/atom/templates/crd.yml.tmpl
+++ b/pkg/atom/templates/crd.yml.tmpl
@@ -1,4 +1,4 @@
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: atoms.atom.convox.com
@@ -8,7 +8,10 @@ spec:
     - name: v1
       served: true
       storage: true
-  version: v1
+      additionalPrinterColumns:
+      - name: Status
+        type: string
+        jsonPath: .status
   scope: Namespaced
   names:
     plural: atoms
@@ -16,12 +19,8 @@ spec:
     kind: Atom
     categories:
     - convox
-  additionalPrinterColumns:
-  - name: Status
-    type: string
-    JSONPath: .status
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: atomversions.atom.convox.com
@@ -31,7 +30,6 @@ spec:
     - name: v1
       served: true
       storage: true
-  version: v1
   scope: Namespaced
   names:
     plural: atomversions
