--- a/provider/k8s/template/system/cert-manager-self-signed.yml.tmpl
+++ b/provider/k8s/template/system/cert-manager-self-signed.yml.tmpl
@@ -7,7 +7,7 @@ data:
   tls.crt: "{{.CaPublic}}"
   tls.key: "{{.CaPrivate}}"
 ---
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: self-signed
