--- a/provider/k8s/template/system/crd.yml.tmpl
+++ b/provider/k8s/template/system/crd.yml.tmpl
@@ -1,4 +1,4 @@
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: builds.convox.com
@@ -8,7 +8,6 @@ spec:
     - name: v1
       served: true
       storage: true
-  version: v1
   scope: Namespaced
   names:
     plural: builds
@@ -17,7 +16,7 @@ spec:
     categories:
     - convox
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: releases.convox.com
@@ -27,7 +26,6 @@ spec:
     - name: v1
       served: true
       storage: true
-  version: v1
   scope: Namespaced
   names:
     plural: releases
