--- a/pkg/atom/templates/crd.yml.tmpl
+++ b/pkg/atom/templates/crd.yml.tmpl
@@ -9,16 +9,47 @@ spec:
       served: true
       storage: true
       additionalPrinterColumns:
-      - name: Status
-        type: string
-        jsonPath: .status
+        - name: Status
+          type: string
+          jsonPath: .status
+      schema:
+        openAPIV3Schema:
+          type: object
+          properties:
+            spec:
+              type: object
+              properties:
+                conditions:
+                  type: object
+                  properties:
+                    spec:
+                      type: object
+                      properties:
+                        apiVersion:
+                          type: string
+                        conditions:
+                          type: object
+                          additionalProperties:
+                            type: string
+                        kind:
+                          type: string
+                        name:
+                          type: string
+                        namespace:
+                          type: string
+                currentVersion:
+                  type: string
+                previousVersion:
+                  type: string
+                progressDeadlineSeconds:
+                  type: integer
   scope: Namespaced
   names:
     plural: atoms
     singular: atom
     kind: Atom
     categories:
-    - convox
+      - convox
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -30,10 +61,22 @@ spec:
     - name: v1
       served: true
       storage: true
+      schema:
+        openAPIV3Schema:
+          type: object
+          properties:
+            spec:
+              type: object
+              properties:
+                release:
+                  type: string
+                template:
+                  type: string
+                  format: byte
   scope: Namespaced
   names:
     plural: atomversions
     singular: atomversion
     kind: AtomVersion
     categories:
-    - convox
+      - convox
