Adjusting CRD Schemas

--- a/pkg/atom/templates/crd.yml.tmpl
+++ b/pkg/atom/templates/crd.yml.tmpl
@@ -16,6 +16,10 @@ spec:
         openAPIV3Schema:
           type: object
           properties:
+            started:
+              type: string
+            status:
+                type: string
             spec:
               type: object
               properties:
@@ -65,6 +69,8 @@ spec:
         openAPIV3Schema:
           type: object
           properties:
+            status:
+              type: string
             spec:
               type: object
               properties:
