--- a/pkg/atom/templates/crd.yml.tmpl
+++ b/pkg/atom/templates/crd.yml.tmpl
@@ -19,28 +19,33 @@ spec:
             started:
               type: string
             status:
-                type: string
+              type: string
             spec:
               type: object
               properties:
                 conditions:
-                  type: object
-                  properties:
-                    spec:
-                      type: object
-                      properties:
-                        apiVersion:
-                          type: string
-                        conditions:
+                  type: array
+                  nullable: true
+                  items:
+                    type: object
+                    properties:
+                      apiVersion:
+                        type: string
+                      conditions:
+                        type: object
+                        additionalProperties:
                           type: object
-                          additionalProperties:
-                            type: string
-                        kind:
-                          type: string
-                        name:
-                          type: string
-                        namespace:
-                          type: string
+                          properties:
+                            reason:
+                              type: string
+                            status:
+                              type: string
+                      kind:
+                        type: string
+                      name:
+                        type: string
+                      namespace:
+                        type: string
                 currentVersion:
                   type: string
                 previousVersion:
