Creating a new app use an empty Atom CRD

--- a/pkg/atom/templates/crd.yml.tmpl
+++ b/pkg/atom/templates/crd.yml.tmpl
@@ -18,10 +18,13 @@ spec:
           properties:
             started:
               type: string
+              nullable: true
             status:
               type: string
+              nullable: true
             spec:
               type: object
+              nullable: true
               properties:
                 conditions:
                   type: array
