missing pathType field on Ingress

--- a/provider/k8s/template/app/ingress.yml.tmpl
+++ b/provider/k8s/template/app/ingress.yml.tmpl
@@ -51,6 +51,7 @@ spec:
               name: {{.Service.Name}}
               port:
                 number: {{.Service.Port.Port}}
+          pathType: ImplementationSpecific
     {{ range .Service.Domains }}
     - host: {{ safe . }}
       http:
