Upgrade Nginx ingress controller from v0.48 to the latest version. 1.3.0 (#472)
* update api version for Ingress object

* fix service backend tmpl sintax

* Upgrade nginx ingress controller version

* add missing rule on nginx-ingress Role

* creating ngin ingress class on tf template

* missing pathType field on Ingress

* fix basic-app.yaml to reflect template changes

* fix unit tests

* Add nginx ingressclass on registry ingress in digital ocean

* update nginx ingress class name in gcp (#479)

--- a/provider/k8s/template/app/ingress.yml.tmpl
+++ b/provider/k8s/template/app/ingress.yml.tmpl
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   namespace: {{.Namespace}}
@@ -7,7 +7,6 @@ metadata:
     alb.ingress.kubernetes.io/scheme: internet-facing
     convox.com/backend-protocol: "{{.Service.Port.Scheme}}"
     convox.com/idles: "{{.Idles}}"
-    kubernetes.io/ingress-class: "{{.Class}}"
     nginx.ingress.kubernetes.io/backend-protocol: "{{.Service.Port.Scheme}}"
     nginx.ingress.kubernetes.io/proxy-connect-timeout: "{{.Service.Timeout}}"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "{{.Service.Timeout}}"
@@ -34,6 +33,7 @@ metadata:
     system: convox
     type: service
 spec:
+  ingressClassName: "{{.Class}}"
   tls:
   - hosts:
     - {{ safe .Host }}
@@ -50,13 +50,18 @@ spec:
       http:
         paths:
         - backend:
-            serviceName: {{.Service.Name}}
-            servicePort: {{.Service.Port.Port}}
+            service:
+              name: {{.Service.Name}}
+              port:
+                number: {{.Service.Port.Port}}
+          pathType: ImplementationSpecific
     {{ range .Service.Domains }}
     - host: {{ safe . }}
       http:
         paths:
         - backend:
-            serviceName: {{$.Service.Name}}
-            servicePort: {{$.Service.Port.Port}}
+            service:
+              name: {{$.Service.Name}}
+              port:
+                number: {{$.Service.Port.Port}}
     {{ end }}
