--- a/provider/k8s/template/resource/postgres.yml.tmpl
+++ b/provider/k8s/template/resource/postgres.yml.tmpl
@@ -11,6 +11,11 @@ metadata:
     resource: {{.Name}}
 data:
   URL: "postgres://app:{{.Password}}@resource-{{ k8sname .Name }}.{{.Namespace}}.svc.cluster.local:5432/app?sslmode=disable"
+  USER: "app"
+  PASS: "{{.Password}}"
+  HOST: "resource-{{ k8sname .Name }}.{{.Namespace}}.svc.cluster.local"
+  PORT: "5432"
+  NAME: "app"
 ---
 kind: PersistentVolumeClaim
 apiVersion: v1
