Revert "Upgrade Nginx ingress controller from v0.48 to the latest version. 1.3.0 (#472)"
This reverts commit 2876773904a2540e86cd43d051d91a480fc2700a.

--- a/provider/k8s/template/app/ingress.yml.tmpl
+++ b/provider/k8s/template/app/ingress.yml.tmpl
@@ -1,4 +1,4 @@
-apiVersion: networking.k8s.io/v1
+apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   namespace: {{.Namespace}}
@@ -7,6 +7,7 @@ metadata:
     alb.ingress.kubernetes.io/scheme: internet-facing
     convox.com/backend-protocol: "{{.Service.Port.Scheme}}"
     convox.com/idles: "{{.Idles}}"
+    kubernetes.io/ingress-class: "{{.Class}}"
     nginx.ingress.kubernetes.io/backend-protocol: "{{.Service.Port.Scheme}}"
     nginx.ingress.kubernetes.io/proxy-connect-timeout: "{{.Service.Timeout}}"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "{{.Service.Timeout}}"
@@ -30,7 +31,6 @@ metadata:
     system: convox
     type: service
 spec:
-  ingressClassName: "{{.Class}}"
   tls:
   - hosts:
     - {{ safe .Host }}
@@ -47,18 +47,13 @@ spec:
       http:
         paths:
         - backend:
-            service:
-              name: {{.Service.Name}}
-              port:
-                number: {{.Service.Port.Port}}
-          pathType: ImplementationSpecific
+            serviceName: {{.Service.Name}}
+            servicePort: {{.Service.Port.Port}}
     {{ range .Service.Domains }}
     - host: {{ safe . }}
       http:
         paths:
         - backend:
-            service:
-              name: {{$.Service.Name}}
-              port:
-                number: {{$.Service.Port.Port}}
+            serviceName: {{$.Service.Name}}
+            servicePort: {{$.Service.Port.Port}}
     {{ end }}
