replace property name justo concurrency

--- a/provider/k8s/template/app/timer.yml.tmpl
+++ b/provider/k8s/template/app/timer.yml.tmpl
@@ -6,7 +6,7 @@ metadata:
   name: timer-{{.Timer.Name}}
 spec:
   schedule: "{{.Timer.Schedule}}"
-  concurrencyPolicy: {{.Timer.ConcurrencyPolicy}}
+  concurrencyPolicy: {{.Timer.Concurrency}}
   successfulJobsHistoryLimit: 1
   failedJobsHistoryLimit: 1
   jobTemplate:
