Adding in whitelist option at the service level (#492)
* Adding in whitelist option at the service level

* Only apply if there is a value

* Testing

* Quotes

* Quotes confusion

* Fixing the tests

--- a/provider/k8s/template/app/ingress.yml.tmpl
+++ b/provider/k8s/template/app/ingress.yml.tmpl
@@ -22,6 +22,9 @@ metadata:
     nginx.ingress.kubernetes.io/session-cookie-name: CONVOXSESSION
     {{ end }}
     nginx.ingress.kubernetes.io/ssl-redirect: "{{.Service.Tls.Redirect}}"
+    {{ if .Service.Whitelist }}
+    nginx.ingress.kubernetes.io/whitelist-source-range: "{{.Service.Whitelist}}"
+    {{ end }}
     {{ range $k, $v := .Annotations }}
     {{$k}}: {{ safe $v }}
     {{ end }}
