Fixes on ingress resources

--- a/provider/k8s/template/app/ingress.yml.tmpl
+++ b/provider/k8s/template/app/ingress.yml.tmpl
@@ -64,4 +64,5 @@ spec:
               name: {{$.Service.Name}}
               port:
                 number: {{$.Service.Port.Port}}
+          pathType: ImplementationSpecific
     {{ end }}
