--- a/provider/k8s/template/app/service.yml.tmpl
+++ b/provider/k8s/template/app/service.yml.tmpl
@@ -109,7 +109,7 @@ spec:
           valueFrom:
             configMapKeyRef:
               name: resource-{{ k8sname .Name }}
-              key: {{ resourceEnv .Env }}
+              key: {{ .GetConfigMapKey }}
         {{ end }}
         envFrom:
         - secretRef:
