--- a/provider/k8s/template/system/metrics.yml.tmpl
+++ b/provider/k8s/template/system/metrics.yml.tmpl
@@ -69,7 +69,7 @@ spec:
         emptyDir: {}
       containers:
       - name: metrics-server
-        image: k8s.gcr.io/metrics-server-amd64:v0.3.0
+        image: registry.k8s.io/metrics-server-amd64:v0.3.0
         imagePullPolicy: Always
         volumeMounts:
         - name: tmp-dir
