Add DNS search for app.rack alias

--- a/provider/k8s/template/app/service.yml.tmpl
+++ b/provider/k8s/template/app/service.yml.tmpl
@@ -79,6 +79,7 @@ spec:
         nameservers:
           - "{{ . }}"
         searches:
+          - "{{$.App.Name}}.{{$.Rack}}"
           - "{{$.App.Name}}.{{$.Rack}}.local"
           - "{{$.Namespace}}.svc.cluster.local"
           - "{{$.Rack}}.local"
