--- a/provider/k8s/template/app/timer.yml.tmpl
+++ b/provider/k8s/template/app/timer.yml.tmpl
@@ -30,6 +30,7 @@ spec:
             nameservers:
               - "{{ . }}"
             searches:
+              - "{{$.App.Name}}.{{$.Rack}}"
               - "{{$.App.Name}}.{{$.Rack}}.local"
               - "{{$.Namespace}}.svc.cluster.local"
               - "{{$.Rack}}.local"
