Add grpc support

--- a/provider/k8s/template/app/service.yml.tmpl
+++ b/provider/k8s/template/app/service.yml.tmpl
@@ -133,6 +133,7 @@ spec:
           {{ end }}
         {{ end }}
         {{ with .Service.Port.Port }}
+        {{ if not (eq $.Service.Port.Scheme "GRPC") }}
         readinessProbe:
           httpGet:
             path: "{{$.Service.Health.Path}}"
@@ -143,6 +144,16 @@ spec:
           timeoutSeconds: {{$.Service.Health.Timeout}}
           successThreshold: 1
           failureThreshold: 3
+        {{ else if $.Service.GrpcHealthEnabled }}
+        livenessProbe:
+          grpc:
+            port: {{.}}
+          initialDelaySeconds: 10
+          periodSeconds: 5
+          timeoutSeconds: 15
+          successThreshold: 1
+          failureThreshold: 5
+        {{ end }}
         {{ end }}
         ports:
         {{ with .Service.Port.Port }}
