--- a/provider/k8s/template/app/timer.yml.tmpl
+++ b/provider/k8s/template/app/timer.yml.tmpl
@@ -23,6 +23,9 @@ spec:
             release: {{.Release.Id}}
             service: {{.Service.Name}}
             type: timer
+            {{ range keyValue .Service.Labels }}
+            {{.Key}}: "{{.Value}}"
+            {{ end }}
         spec:
           {{ with .Resolver }}
           dnsPolicy: "None"
