--- a/provider/k8s/template/app/volumes.yml.tmpl
+++ b/provider/k8s/template/app/volumes.yml.tmpl
@@ -5,6 +5,9 @@ apiVersion: v1
 metadata:
   namespace: {{$.Namespace}}
   name: {{ volumeName $.App . }}
+  {{ range keyValue .Labels }}
+  {{.Key}}: "{{.Value}}"
+  {{ end }}
 spec:
   accessModes:
   - ReadWriteOnce
