Fix volumes parsing error

--- a/provider/k8s/template/app/volumes.yml.tmpl
+++ b/provider/k8s/template/app/volumes.yml.tmpl
@@ -7,7 +7,7 @@ metadata:
   name: {{ volumeName $.App . }}
   labels:
     system: convox
-    {{ range keyValue .Labels }}
+    {{ range keyValue $.Labels }}
     {{.Key}}: "{{.Value}}"
     {{ end }}
 spec:
