--- a/provider/k8s/template/app/timer.yml.tmpl
+++ b/provider/k8s/template/app/timer.yml.tmpl
@@ -46,9 +46,15 @@ spec:
             {{.Key}}: "{{.Value}}"
             {{ end }}
         spec:
-          {{ with .Resolver }}
+          {{ if or (.Resolver) (gt .Service.DnsConfig.Ndots 0) }}
           dnsPolicy: "None"
           dnsConfig:
+            {{ if gt .Service.DnsConfig.Ndots 0 }}
+            options:
+            - name: ndots
+              value: "{{.Service.DnsConfig.Ndots}}"
+            {{ end }}
+            {{ with .Resolver }}
             nameservers:
               - "{{ . }}"
             searches:
@@ -57,6 +63,7 @@ spec:
               - "{{$.Rack}}.local"
               - "svc.cluster.local"
               - "cluster.local"
+            {{ end }}
           {{ end }}
           restartPolicy: Never
           shareProcessNamespace: {{.Service.Init}}
