Add support to disable convox domain tls cert

--- a/provider/k8s/template/app/ingress.yml.tmpl
+++ b/provider/k8s/template/app/ingress.yml.tmpl
@@ -38,9 +38,11 @@ metadata:
 spec:
   ingressClassName: "{{.Class}}"
   tls:
+  {{ if .ConvoxDomainTLSCertDisable }}
   - hosts:
     - {{ safe .Host }}
     secretName: cert-{{.Service.Name}}
+  {{ end }}
   {{ with .Service.Domains }}
   - hosts:
     {{ range . }}
