Add support for emptyDir volume

--- a/provider/k8s/template/app/service.yml.tmpl
+++ b/provider/k8s/template/app/service.yml.tmpl
@@ -228,6 +228,12 @@ spec:
         - name: {{ volumeName $.App.Name (volumeFrom $.App.Name $.Service.Name .) }}
           mountPath: "{{ volumeTo . }}"
         {{ end }}
+        {{ range .Service.VolumeOptions }}
+        {{ with .EmptyDir }}
+        - name: ed-{{ .Id }}
+          mountPath: {{ .MountPath }}
+        {{ end }}
+        {{ end }}
       volumes:
       - name: ca
         configMap:
@@ -242,6 +248,17 @@ spec:
         persistentVolumeClaim:
           claimName: {{ volumeName $.App.Name . }}
         {{ end }}
+      {{ end }}
+      {{ range .Service.VolumeOptions }}
+      {{ with .EmptyDir }}
+      - name: ed-{{ .Id }}
+        {{ if .Medium }}
+        emptyDir:
+          medium: {{ .Medium }}
+        {{ else }}
+        emptyDir: {}
+        {{ end }}
+      {{ end }}
       {{ end }}
 {{ if not (eq .Service.Scale.Count.Min .Service.Scale.Count.Max) }}
 ---
