Process aws resource connection info asynchronously

--- a/pkg/atom/templates/atom.yml.tmpl
+++ b/pkg/atom/templates/atom.yml.tmpl
@@ -6,4 +6,8 @@ metadata:
 spec:
   currentVersion: {{.Name}}-{{.Version}}
   progressDeadlineSeconds: {{.Timeout}}
+  dependencies:
+  {{ range .Dependencies }}
+  - {{.}}
+  {{ end }}
 status: Pending
