Added feature for using custom image in convox resources - feature/resource-custom-image-params (#807)
* added custom image in resource and modified templates

* updated docs for custom images in resources

* formatting changes in templates and releasetemplate method

--- a/provider/k8s/template/resource/mariadb.yml.tmpl
+++ b/provider/k8s/template/resource/mariadb.yml.tmpl
@@ -67,7 +67,7 @@ spec:
     spec:
       containers:
       - name: mariadb
-        image: mariadb:{{ coalesce (index .Parameters "version") "10.6.0" }}
+        image: {{ if not .Image }}mariadb:{{ coalesce (index .Parameters "version") "10.6.0" }}{{ else }}{{ .Image }}{{ end }}
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 3306
