Fix template error when domain is provided

--- a/provider/k8s/template/app/ingress.yml.tmpl
+++ b/provider/k8s/template/app/ingress.yml.tmpl
@@ -48,7 +48,7 @@ spec:
     {{ range . }}
     - {{ safe . }}
     {{ end }}
-    secretName: {{ if .Service.Certificate.Id }} {{.Service.Certificate.Id}} {{ else }} cert-{{$.Service.Name}}-domains {{ end }}
+    secretName: {{ if $.Service.Certificate.Id }} {{$.Service.Certificate.Id}} {{ else }} cert-{{$.Service.Name}}-domains {{ end }}
   {{ end }}
   rules:
     - host: {{ safe .Host }}
