Add support to create certificate using dns01 for internal router

--- a/provider/k8s/template/app/ingress-internal.yml.tmpl
+++ b/provider/k8s/template/app/ingress-internal.yml.tmpl
@@ -37,6 +37,14 @@ metadata:
     {{ end }}
 spec:
   ingressClassName: "{{.Class}}"
+  tls:
+  {{ with .Service.Domains }}
+  - hosts:
+    {{ range . }}
+    - {{ safe . }}
+    {{ end }}
+    secretName: {{ if $.Service.Certificate.Id }} {{$.Service.Certificate.Id}} {{ else }} cert-{{$.Service.Name}}-domains {{ end }}
+  {{ end }}
   rules:
     - host: {{ safe .Host }}
       http:
