image parameter update

--- a/provider/k8s/template/app/service.yml.tmpl
+++ b/provider/k8s/template/app/service.yml.tmpl
@@ -109,7 +109,7 @@ spec:
       terminationGracePeriodSeconds: {{$.Service.Termination.Grace}}
       initContainers:
       - name: init-{{.App.Name}}
-        image: {{ .Service.InitContainer.Image }} 
+        image: {{ coalesce .Service.InitContainer.Image (image .App .Service .Release) }}
         {{ with .Service.InitContainer.Command }}
         args:
         {{ range shellsplit . }}
