--- a/provider/k8s/template/app/service.yml.tmpl
+++ b/provider/k8s/template/app/service.yml.tmpl
@@ -107,6 +107,7 @@ spec:
       serviceAccountName: {{.Service.Name}}
       shareProcessNamespace: {{.Service.Init}}
       terminationGracePeriodSeconds: {{$.Service.Termination.Grace}}
+      {{if .Service.InitContainer.Command }}
       initContainers:
       - name: init-{{.App.Name}}
         image: {{ coalesce .Service.InitContainer.Image (image .App .Service .Release) }}
@@ -127,6 +128,7 @@ spec:
           mountPath: {{ .MountPath }}
         {{ end }}
         {{ end }}
+      {{ end }}
       containers:
       - name: {{.App.Name}}
         {{ with .Service.Command }}
