--- a/provider/k8s/template/app/service.yml.tmpl
+++ b/provider/k8s/template/app/service.yml.tmpl
@@ -107,7 +107,7 @@ spec:
       serviceAccountName: {{.Service.Name}}
       shareProcessNamespace: {{.Service.Init}}
       terminationGracePeriodSeconds: {{$.Service.Termination.Grace}}
-      {{if .Service.InitContainer.Command }}
+      {{if .Service.InitContainer }}
       initContainers:
       - name: init-{{.App.Name}}
         image: {{ coalesce .Service.InitContainer.Image (image .App .Service .Release) }}
