adding init container support for convox service (#825)
* adding init container to template and struct

* image parameter update

* adding check for command before creation of initcontainer

* updated check condition for initcontainer

--- a/provider/k8s/template/app/service.yml.tmpl
+++ b/provider/k8s/template/app/service.yml.tmpl
@@ -107,6 +107,28 @@ spec:
       serviceAccountName: {{.Service.Name}}
       shareProcessNamespace: {{.Service.Init}}
       terminationGracePeriodSeconds: {{$.Service.Termination.Grace}}
+      {{if .Service.InitContainer }}
+      initContainers:
+      - name: init-{{.App.Name}}
+        image: {{ coalesce .Service.InitContainer.Image (image .App .Service .Release) }}
+        {{ with .Service.InitContainer.Command }}
+        args:
+        {{ range shellsplit . }}
+          - {{ safe . }}
+        {{ end }}
+        {{ end }}
+        volumeMounts:
+        {{ range .Service.InitContainer.VolumeOptions }}
+        {{ with .EmptyDir }}
+        - name: ed-{{ .Id }}
+          mountPath: {{ .MountPath }}
+        {{ end }}
+        {{ with .AwsEfs }}
+        - name: efs-{{ .Id }}
+          mountPath: {{ .MountPath }}
+        {{ end }}
+        {{ end }}
+      {{ end }}
       containers:
       - name: {{.App.Name}}
         {{ with .Service.Command }}
