hpa max instance variable

--- a/provider/k8s/template/cms/drupal.yml.tmpl
+++ b/provider/k8s/template/cms/drupal.yml.tmpl
@@ -235,7 +235,7 @@ spec:
     kind: Deployment
     name: {{.CMSInstance.Name}}
   minReplicas: {{.CMSInstance.Scale.Min}}
-  maxReplicas: {{.CMSInstance.Scale.Min}}
+  maxReplicas: {{.CMSInstance.Scale.Max}}
   metrics:
   - type: Resource
     resource:
