--- a/provider/k8s/template/app/service.yml.tmpl
+++ b/provider/k8s/template/app/service.yml.tmpl
@@ -19,9 +19,9 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   annotations:
-    {{ range keyValue .Annotations }}
-    {{.Key}}: "{{ quoteEscape .Value}}"
-    {{ end }}
+    {{- if ne (len .Annotations) 0 }}
+    {{- yamlMarshal .Annotations | nindent 4 }}
+    {{- end }}
   namespace: {{.Namespace}}
   name: {{.Service.Name}}
   labels:
@@ -70,9 +70,9 @@ spec:
         {{ if .Service.Agent.Enabled }}
         scheduler.alpha.kubernetes.io/critical-pod: ""
         {{ end }}
-        {{ range keyValue .Annotations }}
-        {{.Key}}: "{{ quoteEscape .Value}}"
-        {{ end }}
+        {{- if ne (len .Annotations) 0 }}
+        {{- yamlMarshal .Annotations | nindent 8 }}
+        {{- end }}
       labels:
         system: convox
         rack: {{.Rack}}
