Optimize app list api

--- a/pkg/atom/templates/crd.yml.tmpl
+++ b/pkg/atom/templates/crd.yml.tmpl
@@ -53,6 +53,8 @@ spec:
                   type: string
                 previousVersion:
                   type: string
+                releaseCache:
+                  type: string
                 progressDeadlineSeconds:
                   type: integer
                 dependencies:
