Add option provide aws efs storage class and Add support for startupProbe

--- a/provider/k8s/template/app/efs.yml.tmpl
+++ b/provider/k8s/template/app/efs.yml.tmpl
@@ -14,7 +14,7 @@ metadata:
 spec:
   accessModes:
     - {{.AccessMode}}
-  storageClassName: efs-sc
+  storageClassName: {{ if .StorageClass }} {{.StorageClass}} {{ else }} efs-sc {{end}}
   resources:
     requests:
       storage: 1Mi # efs driver ignores this value
