For database type update deployment strategy to recreate

--- a/provider/k8s/template/resource/postgis.yml.tmpl
+++ b/provider/k8s/template/resource/postgis.yml.tmpl
@@ -57,6 +57,8 @@ spec:
       app: {{.App}}
       resource: {{.Name}}
   replicas: 1
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
