--- a/provider/k8s/template/resource/mariadb.yml.tmpl
+++ b/provider/k8s/template/resource/mariadb.yml.tmpl
@@ -56,6 +56,8 @@ spec:
       app: {{.App}}
       resource: {{.Name}}
   replicas: 1
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
