--- a/provider/k8s/template/app/service.yml.tmpl
+++ b/provider/k8s/template/app/service.yml.tmpl
@@ -109,7 +109,7 @@ spec:
       terminationGracePeriodSeconds: {{$.Service.Termination.Grace}}
       {{if .Service.InitContainer }}
       initContainers:
-      - name: init-{{.App.Name}}
+      - name: init
         image: {{ coalesce .Service.InitContainer.Image (image .App .Service .Release) }}
         {{ with .Service.InitContainer.Command }}
         args:
