--- a/provider/k8s/template/app/service.yml.tmpl
+++ b/provider/k8s/template/app/service.yml.tmpl
@@ -284,7 +284,11 @@ spec:
             cpu: "{{.Service.Scale.Limit.Cpu}}m"
             {{ end }}
             {{ with .Service.Scale.Gpu.Count }}
+            {{ if hasSuffix $.Service.Scale.Gpu.Vendor ".com"}}
+            {{$.Service.Scale.Gpu.Vendor}}/gpu: "{{.}}"
+            {{ else }}
             {{$.Service.Scale.Gpu.Vendor}}.com/gpu: "{{.}}"
+            {{ end }}
             {{ end }}
             {{ if (gt .Service.Scale.Limit.Memory 0)}}
             memory: "{{.Service.Scale.Limit.Memory}}Mi"
@@ -296,7 +300,11 @@ spec:
             cpu: "{{.}}m"
             {{ end }}
             {{ with .Service.Scale.Gpu.Count }}
+            {{ if hasSuffix $.Service.Scale.Gpu.Vendor ".com"}}
+            {{$.Service.Scale.Gpu.Vendor}}/gpu: "{{.}}"
+            {{ else }}
             {{$.Service.Scale.Gpu.Vendor}}.com/gpu: "{{.}}"
+            {{ end }}
             {{ end }}
             {{ with .Service.Scale.Memory }}
             memory: "{{.}}Mi"
